--- a/styles/content01.css
+++ b/styles/content01.css
@@ -26,10 +26,10 @@ header h2{
 
 
 div.image{
-    margin-left: 32.5%;
+    margin: 0 25%;
     border: 2px solid #1434A4;
-    height: 250px;
-    width: 35%;
+    height: 300px;
+    width: 50%;
 }
 
 body {
