--- a/styles/content01.css
+++ b/styles/content01.css
@@ -28,8 +28,8 @@ header h2{
 div.image{
     margin: 0 25%;
     border: 2px solid #1434A4;
-    height: 300px;
-    width: 50%;
+    height: 302px;
+    width: 502px;
 }
 
 body {
