--- a/styles/content01.css
+++ b/styles/content01.css
@@ -29,7 +29,7 @@ div.image{
     margin: 0 32.75%;
     border: 2px solid #1434A4;
     height: 304px;
-    width: 35.25%;
+    width: 504px;
 }
 
 body {
